# half-plane-intersection

./: CMakeLists.txt  README.md  half_plane_intersection.h  main.cpp
